Fix thumbnails being overlapped on post icon

--- a/src/scss/modules/_link-flair.scss
+++ b/src/scss/modules/_link-flair.scss
@@ -8,6 +8,12 @@
 		background-repeat: repeat;
 		background-size: 100%;
 		margin: 0 10px;
+		img {
+			width: 50px;
+			height: auto;
+			background: #fff;
+			padding-bottom: 50px;
+		}
 	}
 	.linkflairlabel{
 		display: none;
